--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "wouldyourather",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goestao/github.io/wouldyourather",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
@@ -21,9 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "eject": "react-scripts eject"  
   },
   "eslintConfig": {
     "extends": "react-app"
